lab3/Ebinger/roscourse_ws/log/build_2026-02-25_02-06-01/python_turtle/stderr.log
  File "/home/yahboom/Desktop/S26_RobotProgramming_Crystal/lab3/Ebinger/roscourse_ws/install/python_turtle/lib/python3.10/site-packages/python_turtle/turtlebot_server.py", line 47
    return response
    ^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function

